# FaceTracker

./: .gitignore  CMakeLists.txt  README.md  test.bat
include/: cluster.h  configuration.h  face_detector.h  face_tracker.h  hungarian.h  multiobject_tracker.h  scrfd_detector.h  scrfd_onnxrunner.h  utils.h
src/: cluster.py  face_detector.cpp  face_tracker.cpp  face_tracker.py  hungarian.cpp  hungarian.py  main.cpp  main.py  multiobject_tracker.cpp  multiobject_tracker.py  scrfd_detector.cpp  scrfd_detector.py  scrfd_onnxrunner.cpp  utils.py
